--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@ body{
   <fieldset>
     <legend>ipl-login</legend>
 <center><table>
-<form action="loginform" method="post">
+<form action="loginform" method="get">
 <tr>
 <td><b>email:</b></td>
 <td><input type="text" name="email" placeholder="enter u r email-id" required /></td>
